add auth route to openapi spec
