# apps/api/src/v1/route.ts
@@ -1,4 +1,4 @@
-import { authApp } from "./auth";
+import { authRoute } from "./auth/route";
 import { resourcesRouter } from "./resources";
 import { versions } from "./versions/versions";
 import { sessionRoute } from "./session/route";
@@ -6,4 +6,4 @@ import { OpenAPIHono } from "@hono/zod-openapi";
 
 
 export const v1 = new OpenAPIHono<{ Bindings: CloudflareBindings }>()
-  .route("/session", sessionRoute)
+  .route("/session", sessionRoute).route("/auth", authRoute)
